--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,5 @@
             </plugin>
         </plugins>
     </build>
-    <properties>
-        <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
-    </properties>
+    <properties></properties>
 </project>
